
This file shows the changes in recent releases of MODx. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#3481], [#3571], [#3304] Fix issue with filemanager_path in non-web contexts 
- [#3009] Add ability to assign TVs to specific directories and base paths, limit file extensions shown
- [#2679] Add Input Options to TVs, allowing TV inputs to be customized and tweaked

MODx Revolution 2.0.7-pl (January 14, 2011)
====================================
- [#3472] Fix issue due to tree impr that prevented element saving success response
- Improve loading of mgr pages by preventing trees from rendering until activated
- [#3205] FC fixes: Ensure Resource Content field can have values set/renamed, that rules on create respect template, and that default values on create are set
- [#3165] Fix issue where resource/updatefromgrid processor was missing published value if user does not have publish permission
- [#2] Fix issue in user extended fields where subkeys in 2 separate containers DOM IDs conflict and prevent editing
- [#3422], [#3374], [#3197] Fix issue with filemanager_url and Image/File TVs and their relative end result URLs
- [#3201], [#177] Add modResource.leaveGroup, modTemplate.hasTemplateVar, modTemplateVar.hasTemplate
- [#3350] Fix for PHP bug: http://www.exploringbinary.com/php-hangs-on-numeric-value-2-2250738585072011e-308/
- [#3326] Fix issue where TV radio/cb options with value of 0 couldnt be selected
- [#3329] Fix edit and cancel buttons on view resource page
- [#3329] Clarify Preview link on Resource action toolbar to be more correct "View"
- [#3347] Fix issue where renaming a file broke the browsing of directory tree
- Fix issue where FC tvDefault rules, regardless of active state, are always run
- Introduce pdo_sqlsrv support
- Add database_dsn to config
- Update xPDO to release 2.1.0-pl

MODx Revolution 2.0.6-pl2 (January 6, 2011)
====================================